plugins {
    id("java")
    id("org.springframework.boot") version '3.2.3'
    id("io.spring.dependency-management") version '1.1.4'
    id("jacoco")
    id("org.sonarqube") version '4.4.1.3373'
    id("com.palantir.docker") version '0.36.0'
}

group = 'com.pikachu'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

sonar {
    properties {
        property("sonar.projectKey", "pikachu-perfume_purple-server")
        property("sonar.organization", "pikachu-perfume")
        property("sonar.host.url", "https://sonarcloud.io")
        property("sonar.java.coveragePlugin", "jacoco")
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    runtimeOnly 'com.mysql:mysql-connector-j'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'

    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'javax.mail:javax.mail-api:1.6.2'

    // jwt
    implementation 'com.auth0:java-jwt:4.4.0'
    implementation 'com.auth0:jwks-rsa:0.22.1'

    // S3
    implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
}

tasks.named('test') {
    useJUnitPlatform()
}
